# CppQtTemplate

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/Core/: Window.h
engine/src/: Window.cpp
src/: main.cpp
